[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "seedance25-api"
version = "0.1.0"
description = "Python wrapper for CyberBara Seedance 2.5 API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Zero Lu", email = "zerolu.eth@gmail.com" }
]
dependencies = []
keywords = ["seedance", "seedance 2.5", "cyberbara", "video generation", "api"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/ZeroLu/seedance2.5-API"
Repository = "https://github.com/ZeroLu/seedance2.5-API"
Issues = "https://github.com/ZeroLu/seedance2.5-API/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
